<resources>
    <string name="app_name">CatViewer</string>
    <string name="check_box_viewer">Check box Viewer</string>
    <string name="radio_box_viewer">Radio Box Viewer</string>
    <string name="toggle_button_viewer">Toggle Button Viewer</string>
    <string name="spinner_viewer">Spinner Viewer</string>
    <string name="image_cat">relaxed cat</string>
    <string name="relaxed_cat">Relaxed cat</string>
    <string name="sitting_cat">Sitting cat</string>
    <string name="jumping_cat">Jumping cat</string>
    <string name="recyclerview_viewer">RecyclerView Viewer</string>
    <string-array name="cats">
        <item>@string/relaxed_cat</item>
        <item>@string/sitting_cat</item>
        <item>@string/jumping_cat</item>
    </string-array>
</resources>