<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageCat"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:contentDescription="@string/image_cat"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cat_relaxed" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_relaxed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relaxed_cat" />

        <RadioButton
            android:id="@+id/btn_sitting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sitting_cat" />

        <RadioButton
            android:id="@+id/btn_jumping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumping_cat" />

    </RadioGroup>


</LinearLayout>