<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageCat"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:contentDescription="@string/image_cat"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cat_relaxed" />

    <ToggleButton
        android:id="@+id/btnPushCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/relaxed_cat"
        android:textOn="@string/jumping_cat" />


</LinearLayout>