<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCheckBox"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/check_box_viewer"
        app:layout_constraintBottom_toTopOf="@+id/btnRadio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecycler" />

    <Button
        android:id="@+id/btnRecycler"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/recyclerview_viewer"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/radio_box_viewer"


        app:layout_constraintBottom_toTopOf="@+id/btnToggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckBox" />

    <Button
        android:id="@+id/btnToggle"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button_viewer"
        app:layout_constraintBottom_toTopOf="@+id/btnSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRadio" />

    <Button
        android:id="@+id/btnSpinner"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spinner_viewer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToggle" />
</androidx.constraintlayout.widget.ConstraintLayout>